<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_header"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/note_text_size"
            android:hint="@string/header_hint" />

        <TextView
            android:text="@string/type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/note_text_size"/>

        <Spinner
            android:id="@+id/spinner_note_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="@dimen/note_text_size"/>

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:scaleY="0.8"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_favorite"
            android:textOn="" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="text"
        android:textSize="@dimen/note_text_size"
        android:hint="@string/content"
        android:autofillHints="" />

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

    <Button
        android:id="@+id/button_save_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/save_button"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>